# bookkeeper

./: AGENTS.md  Cargo.toml  README.md  SPEC.md  flake.nix
src/: callback_handlers.rs  helpers.rs  integrations.rs  main.rs  message_handlers.rs  tests.rs
