[package]
name = "readlater-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
teloxide = { version = "0.12", default-features = false, features = ["macros", "auto-send", "ctrlc_handler", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
